# charity-backend

./: .gitignore  ECRLOG_08032025.txt  README.md  pyproject.toml
logs/: bait-zakat.jsonl
src/: config.py  database.py  main.py  queued-json-file-logging-config.json
src/models/: minxin.py  mixin.py  service.py  transaction.py  transaction_log.py
src/routers/: services.py  transactions.py
src/routes/: transactions.py
src/services/: payment.py  service.py  transaction.py  transaction_log.py
src/utils/: create_initial_data.py  ecr_ref_generator.py  geidea_api_helper.py  my_logger.py
